# lightvideo

./: .gitignore  .gitmodules  Cargo.toml  NOTES
client/: .gitignore  Cargo.toml  README.md
client/src/: double_buffer.rs  main.rs
client/src/decoder/: feedback.rs  input.rs  mod.rs  network.rs  video.rs
client/src/ui/: mod.rs  shader.wgsl  wgpu_state.rs
net/: Cargo.toml
net/src/: feedback_packet.rs  input.rs  lib.rs  packet.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/benchmark/: mod.rs
server/src/capture/: linux.rs  mod.rs
server/src/encoder/: mod.rs  nvidia.rs  openh264_enc.rs
server/src/input/: mod.rs  x11.rs
server/src/packager/: mod.rs  packet.rs
server/src/server/: feedback_server.rs  input_server.rs  mod.rs  streaming_server.rs
statistics/: Cargo.toml
statistics/src/: collector.rs  lib.rs  statistics.rs
statistics/vis/: time_elapsed.py  xy.py
