[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openh264 = { path = "../openh264-rs/openh264" , features = ["decoder"] }
openh264-sys2 = { path = "../openh264-rs/openh264-sys2" }

# Parsing
bytes = "1"
rtp = "0.9.0"
webrtc-util = "0.8"
reed-solomon-novelpoly = "1.0.2"

# Logging
log = "0.4"
flexi_logger = "0.27"
