[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Parsing
socket2 = "0.5"
bytes = "1"
rtp = "0.9.0"
webrtc-util = "0.8"
reed-solomon-novelpoly = "1.0.2"

# Logging
log = "0.4"
flexi_logger = "0.27"

# Decoding
reed-solomon-simd = "2.2"
dcv-color-primitives = "0.6"
openh264 = { path = "../openh264-rs/openh264" , features = ["decoder", "backtrace"] }
openh264-sys2 = { path = "../openh264-rs/openh264-sys2" }


# GUI
winit = {version ="0.29", features = ["rwh_05"]}
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Multithreading stuff
flume = "0.11"
thingbuf = "0.1"
parking_lot = "0.12"

# Stats
statistics = { path = "../statistics" }

# Net
net = { path = "../net" }

# Feedback
timer = "0.2"
chrono = "0.4"
nix = { version = "0.28", features = ["ioctl"] }
