[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp = "0.9.0"
bytes = "1"
log = "0.4"
# laziness
byteorder = "1.5.0"
bytemuck = { version = "1", features=["derive", "min_const_generics"] }
