[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtp = "0.9.0"
bytes = "1"
log = "0.4"
# laziness
byteorder = "1.5.0"
bytemuck = { version = "1", features=["derive", "min_const_generics"] }
# intense, extreme laziness, and performance problems.
bincode = "1"
serde = { version="1", features=["derive"] }

# this is for sending input over the network
winit = {version ="0.29", features = ["rwh_05"]}
int-enum = "1.1"
