[package]
name = "server"
version = "0.1.0"
edition = "2021"


[features]
nvidia-hwenc = ["cudarc", "nvidia-video-codec-sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Build some dependencies so they are faster


[dependencies]
# Capture
xcb = { version = "1", features = ["shm"] }
libc = "0.2"
# Follow semver!!
screenshots = "=0.8.4"
image = "0.24"

# Encode
dcv-color-primitives = "0.6"
openh264 = { path = "../openh264-rs/openh264" , features = ["encoder"] }
openh264-sys2 = { path = "../openh264-rs/openh264-sys2" }

# Hardware Encode
cudarc = { git = "https://github.com/ViliamVadocz/cudarc.git", branch = "improve-em-api", optional=true }
nvidia-video-codec-sdk = { path = "../nvidia-video-codec-sdk", optional=true }

# Networking
# s2n-quic = "1"

# Package
rtp = "0.9.0"
webrtc-util = "0.8"
reed-solomon-simd = "2.2"
bytes = "1"
ring = "0.17.5"
rand = "0.8"
bytemuck = { version = "1", features=["derive", "min_const_generics"] }
lazy_static = "1"

# Logging
log = "0.4"
flexi_logger = "0.27"

# Errors
anyhow = "1"

spin_sleep = "1"

# Multithreading stuff
flume = "0.11"

# Statistics
statistics = { path = "../statistics" }

# Shared packets
net = { path = "../net" }

# Feedback
nix = { version = "0.28", features = ["ioctl"] }

# Neworking serialization
bincode = "1"
