[package]
name = "statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1"
flume = "0.11"
chrono = "0.4"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4.2"
